--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body data-bs-theme="dark">
     <app-root></app-root>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
